--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       </p>
     </section>
     <section class="u-align-center u-border-2 u-border-grey-75 u-clearfix u-grey-90 u-section-3" id="carousel_de28">
-      <div class="u-clearfix u-sheet u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-sheet-1">
         <h1 class="u-text u-text-1">SKILL</h1>
-        <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-repeater u-list-1">
+        <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-list u-repeater u-list-1">
           <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-1">
             <div class="u-container-layout u-similar-container u-container-layout-1">
               <span class="u-grey-15 u-icon u-icon-circle u-spacing-18 u-icon-1">
@@ -476,7 +476,11 @@
 .u-cookies-consent .u-layout-cell-2 {min-height: 65px}
 .u-cookies-consent .u-container-layout-2 {padding: 10px} }
 
-@media (max-width: 575px){ .u-cookies-consent .u-sheet-1 {min-height: 121px}
-.u-cookies-consent .u-layout-cell-1 {min-height: 100px}
-.u-cookies-consent .u-layout-cell-2 {min-height: 15px} }</style></section></body>
+@media (max-width: 575px){ .u-cookies-consent .u-sheet-1 {min-height: 212px}
+.u-cookies-consent .u-layout-cell-1 {min-height: 152px}
+.u-cookies-consent .u-container-layout-1 {padding-bottom: 30px; padding-left: 60px; padding-right: 60px}
+.u-cookies-consent .u-text-1 {margin-right: 20px}
+.u-cookies-consent .u-text-2 {margin-right: 20px}
+.u-cookies-consent .u-layout-cell-2 {min-height: 152px}
+.u-cookies-consent .u-container-layout-2 {padding: 30px} }</style></section></body>
 </html>
