--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="#carousel_450e" class="u-btn u-button-style u-none u-btn-4">Contact us</a>
       </div>
     </section>
-    <section class="u-align-left u-black u-clearfix u-valign-middle-sm u-valign-middle-xs u-section-2" id="sec-0585">
+    <section class="u-align-left u-black u-clearfix u-valign-middle-sm u-section-2" id="sec-0585">
       <img src="images/54385140_834257280261842_9040286411479056384_n.jpg" alt="" class="u-image u-image-default u-image-1" data-image-width="776" data-image-height="776">
       <p class="u-text u-text-palette-3-light-1 u-text-1">About Me</p>
       <p class="u-text u-text-2"><b>My name :</b> Mr.Thanatthuch&nbsp; Kamseng
@@ -69,9 +69,9 @@
       </p>
     </section>
     <section class="u-align-center u-border-2 u-border-grey-75 u-clearfix u-grey-90 u-section-3" id="carousel_de28">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-bottom-xs u-sheet-1">
         <h1 class="u-text u-text-1">SKILL</h1>
-        <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-repeater u-list-1">
+        <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-list u-repeater u-list-1">
           <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-1">
             <div class="u-container-layout u-similar-container u-valign-top-xs u-container-layout-1">
               <span class="u-grey-15 u-icon u-icon-circle u-spacing-18 u-icon-1">
@@ -501,24 +501,28 @@
 .u-cookies-consent .u-container-layout-2 {padding: 30px}
 .u-cookies-consent .u-btn-1 {margin: 0 auto 0 0} 
 
+@media (max-width: 1199px){ .u-cookies-consent .u-sheet-1 {min-height: 131px}
+.u-cookies-consent .u-layout-cell-1 {min-height: 125px}
+.u-cookies-consent .u-text-1 {margin-right: 0}
+.u-cookies-consent .u-text-2 {margin-right: 0}
+.u-cookies-consent .u-layout-cell-2 {min-height: 125px} }
+
 @media (max-width: 991px){ .u-cookies-consent .u-sheet-1 {min-height: 106px}
 .u-cookies-consent .u-layout-cell-1 {min-height: 100px}
 .u-cookies-consent .u-container-layout-1 {padding-left: 30px; padding-right: 30px}
-.u-cookies-consent .u-text-1 {margin-right: 15px}
-.u-cookies-consent .u-text-2 {margin-right: 15px}
 .u-cookies-consent .u-layout-cell-2 {min-height: 100px} }
 
 @media (max-width: 767px){ .u-cookies-consent .u-sheet-1 {min-height: 225px}
 .u-cookies-consent .u-layout-cell-1 {min-height: 154px}
 .u-cookies-consent .u-container-layout-1 {padding-left: 10px; padding-right: 10px; padding-bottom: 20px}
-.u-cookies-consent .u-text-1 {margin-right: 17px}
-.u-cookies-consent .u-text-2 {margin-right: 17px}
 .u-cookies-consent .u-layout-cell-2 {min-height: 65px}
 .u-cookies-consent .u-container-layout-2 {padding: 10px} }
 
-@media (max-width: 575px){ .u-cookies-consent .u-sheet-1 {min-height: 121px}
-.u-cookies-consent .u-layout-cell-1 {min-height: 100px}
-.u-cookies-consent .u-text-1 {margin-right: 10px}
-.u-cookies-consent .u-text-2 {margin-right: 10px}
-.u-cookies-consent .u-layout-cell-2 {min-height: 15px} }</style></section></body>
+@media (max-width: 575px){ .u-cookies-consent .u-sheet-1 {min-height: 212px}
+.u-cookies-consent .u-layout-cell-1 {min-height: 152px}
+.u-cookies-consent .u-container-layout-1 {padding-bottom: 30px; padding-left: 60px; padding-right: 60px}
+.u-cookies-consent .u-text-1 {margin-right: 20px}
+.u-cookies-consent .u-text-2 {margin-right: 20px}
+.u-cookies-consent .u-layout-cell-2 {min-height: 152px}
+.u-cookies-consent .u-container-layout-2 {padding: 30px} }</style></section></body>
 </html>
