--- a/index.html
+++ b/index.html
@@ -501,28 +501,24 @@
 .u-cookies-consent .u-container-layout-2 {padding: 30px}
 .u-cookies-consent .u-btn-1 {margin: 0 auto 0 0} 
 
-@media (max-width: 1199px){ .u-cookies-consent .u-sheet-1 {min-height: 131px}
-.u-cookies-consent .u-layout-cell-1 {min-height: 125px}
-.u-cookies-consent .u-text-1 {margin-right: 0}
-.u-cookies-consent .u-text-2 {margin-right: 0}
-.u-cookies-consent .u-layout-cell-2 {min-height: 125px} }
-
 @media (max-width: 991px){ .u-cookies-consent .u-sheet-1 {min-height: 106px}
 .u-cookies-consent .u-layout-cell-1 {min-height: 100px}
 .u-cookies-consent .u-container-layout-1 {padding-left: 30px; padding-right: 30px}
+.u-cookies-consent .u-text-1 {margin-right: 15px}
+.u-cookies-consent .u-text-2 {margin-right: 15px}
 .u-cookies-consent .u-layout-cell-2 {min-height: 100px} }
 
 @media (max-width: 767px){ .u-cookies-consent .u-sheet-1 {min-height: 225px}
 .u-cookies-consent .u-layout-cell-1 {min-height: 154px}
 .u-cookies-consent .u-container-layout-1 {padding-left: 10px; padding-right: 10px; padding-bottom: 20px}
+.u-cookies-consent .u-text-1 {margin-right: 17px}
+.u-cookies-consent .u-text-2 {margin-right: 17px}
 .u-cookies-consent .u-layout-cell-2 {min-height: 65px}
 .u-cookies-consent .u-container-layout-2 {padding: 10px} }
 
-@media (max-width: 575px){ .u-cookies-consent .u-sheet-1 {min-height: 212px}
-.u-cookies-consent .u-layout-cell-1 {min-height: 152px}
-.u-cookies-consent .u-container-layout-1 {padding-bottom: 30px; padding-left: 60px; padding-right: 60px}
-.u-cookies-consent .u-text-1 {margin-right: 20px}
-.u-cookies-consent .u-text-2 {margin-right: 20px}
-.u-cookies-consent .u-layout-cell-2 {min-height: 152px}
-.u-cookies-consent .u-container-layout-2 {padding: 30px} }</style></section></body>
+@media (max-width: 575px){ .u-cookies-consent .u-sheet-1 {min-height: 121px}
+.u-cookies-consent .u-layout-cell-1 {min-height: 100px}
+.u-cookies-consent .u-text-1 {margin-right: 10px}
+.u-cookies-consent .u-text-2 {margin-right: 10px}
+.u-cookies-consent .u-layout-cell-2 {min-height: 15px} }</style></section></body>
 </html>
