--- a/About.html
+++ b/About.html
@@ -59,7 +59,7 @@
         <a href="#carousel_450e" class="u-btn u-button-style u-none u-btn-4">Contact us</a>
       </div>
     </section>
-    <section class="u-align-left u-black u-clearfix u-valign-middle-sm u-valign-middle-xs u-section-2" id="sec-0585">
+    <section class="u-align-left u-black u-clearfix u-valign-middle-sm u-section-2" id="sec-0585">
       <img src="images/54385140_834257280261842_9040286411479056384_n.jpg" alt="" class="u-image u-image-default u-image-1" data-image-width="776" data-image-height="776">
       <p class="u-text u-text-palette-3-light-1 u-text-1">About Me</p>
       <p class="u-text u-text-2"><b>My name :</b> Mr.Thanatthuch&nbsp; Kamseng
@@ -69,9 +69,9 @@
       </p>
     </section>
     <section class="u-align-center u-border-2 u-border-grey-75 u-clearfix u-grey-90 u-section-3" id="carousel_de28">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-bottom-xs u-sheet-1">
         <h1 class="u-text u-text-1">SKILL</h1>
-        <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-repeater u-list-1">
+        <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-list u-repeater u-list-1">
           <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-1">
             <div class="u-container-layout u-similar-container u-valign-top-xs u-container-layout-1">
               <span class="u-grey-15 u-icon u-icon-circle u-spacing-18 u-icon-1">
