--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>About</title>
+    <div>
+      <audio autoplay controls loop>
+      <source src="test.mp3" autoplay muted loop controls type="audio/mpeg">
+      <source src="music.ogg" type="audio/ogg">
+      Your browser does not support the audio element.
+      </audio>
+    </div>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="About.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
